--- a/index.ipynb
+++ b/index.ipynb
@@ -245,11 +245,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_nei # add code here"
+    "kindof_neighbors.append('Malta') # add code here"
    ]
   },
   {
