--- a/index.ipynb
+++ b/index.ipynb
@@ -210,22 +210,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['USA', 'Argentina', 'Mexico', 'USA']"
+       "['USA', 'Argentina', 'Mexico', 'USA', 'Malta']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kindof_neighbors = countries[1:5]\n",
+    "#kindof_neighbors = countries[1:5]\n",
     "kindof_neighbors"
    ]
   },
