--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        "['USA', 'Argentina', 'Mexico', 'USA', 'Malta']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,22 +245,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function list.pop>"
+       "'Malta'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kindof_neighbors.pop # add code here"
+    "kindof_neighbors.pop() # add code here"
    ]
   },
   {
