Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,16 +210,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['USA', 'Argentina', 'Mexico', 'USA', 'Malta']"
+       "['USA', 'Argentina', 'Mexico', 'USA']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
     }
    ],
    "source": [
-    "kindof_neighbors.pop() # add code here"
+    "countries.append() # add code here"
    ]
   },
   {
