--- a/index.ipynb
+++ b/index.ipynb
@@ -245,22 +245,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Malta'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "countries.append() # add code here"
+    "countries.append('Malta') # add code here"
    ]
   },
   {
@@ -272,11 +261,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_neighbors.append('Thailand') # add code here"
+    "countries.append('Thailand') # add code here"
    ]
   },
   {
