Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -439,11 +439,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(c)\n",
+    "type(countries)\n",
     "unique_countries = None"
    ]
   },
