--- a/index.ipynb
+++ b/index.ipynb
@@ -439,12 +439,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "type(countries)\n",
-    "unique_countries = setNone"
+    "unique_countries = set(countries)\n"
    ]
   },
   {
