Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -439,16 +439,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "list"
+       "set"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
    "source": [
     "\n",
     "unique_countries = set(countries)\n",
-    "type(countries)"
+    "\n"
    ]
   },
   {
