--- a/index.ipynb
+++ b/index.ipynb
@@ -455,15 +455,34 @@
    ],
    "source": [
     "\n",
-    "unique_countries = set(countries)\n",
-    "\n"
+    "unique_countries = set(countries)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Argentina',\n",
+       " 'Canada',\n",
+       " 'Croatia',\n",
+       " 'Finland',\n",
+       " 'Italy',\n",
+       " 'Malta',\n",
+       " 'Mexico',\n",
+       " 'Morocco',\n",
+       " 'South Korea',\n",
+       " 'USA'}"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "unique_countries  # ['USA', 'Finland', 'Argentina', 'South Korea', 'Morocco',\n",
     "#'Croatia','Mexico','Malta','Italy','Canada']"
